kustomize/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: envoy-stack/backend:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          env:
            - name: PORT
              value: "3000"
            - name: PG_HOST
              value: envoy-l4
            - name: PG_PORT
              value: "1999"
            - name: ENVOY_ADMIN
              value: http://envoy-l4:9901
            - name: PG_DATABASE
              valueFrom:
                secretKeyRef:
                  name: db-creds
                  key: POSTGRES_DB
            - name: PG_USER
              valueFrom:
                secretKeyRef:
                  name: db-creds
                  key: POSTGRES_USER
            - name: PG_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-creds
                  key: POSTGRES_PASSWORD
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
          livenessProbe:
            tcpSocket:
              port: http
