kustomize/base/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
