kustomize/base/monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor
spec:
  selector:
    app: monitor
  ports:
    - name: http
      port: 80
      targetPort: http
